--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <h1>Mail filter</h1>
-  <button class="btn-filter">Filter</button>
+  <button class="btn-filter" id="filter">Filter</button>
   <ul class="result">
   </ul>
   
